2006.10.02: David Nichols
	* fixed modules/TIBCO/Makefile.am to include flags for pthread
	* fixed --without-tuxedo logic in configure.ac
	* added forgotten destructor in safe_dslist template

2006.10.01: David Nichols
	* corrected the atomicity of module initialization
	* reviewed use of new STL containers for thread-concurrency problems
	* removed GlobalVariableList lock and ensured that all reads and 
	  writes take place under the parse lock on the containing program 
	  object
	* ensured that all run-time accesses to the UserFunctionList map under
	  QoreProgram objects takes place in the parse lock
	* write templated safe_dslist for a singly-linked list with constant-
	  time inserts at the beginning and end
	* updated all Makefile.am files in SVN so that profiling will be enabled 
	  even if --enable-debug is also chosen in configure
	* fixed some bugs in the Datasource class introduced in 0.5.2 where a 
	  timeout grabbing the transaction lock would cause a deadlock on future
	  operations on the datasource (with some Datasource methods)
	* separated the qore Datasource class into a DatasourceBase clas and a
	  Datasource class
	* fixed a bug in the SingleExitGate class where a timeout would cause a
	  deadlock the next time ::enter() was called (also affected the 
	  Datasource class)
	* updated examples/db-test.q to test datasource lock timeouts

2006.09.30: David Nichols
	* changed all StringList classes to be based on STL container 
	  functionality
	* added detection of "slist" container support
	* added hash_map/map support for more lists for quick lookups

2006.09.29: David Nichols
	* implemented makeHexString() and parseHexString() functions to generate
	  hex strings from binary data and vice-versa
	* implemented support for directly specifying binary constant values in
	  the scanner using a hex format surrounded by angle brackets 
	  (ex: <34bef4>)
	* fixed a bug in the chomp operator when chomping a newline at the 
	  beginning of the string