@@ -2,6 +2,7 @@
 	* fixed modules/TIBCO/Makefile.am to include flags for pthread
 	* fixed --without-tuxedo logic in configure.ac
 	* added forgotten destructor in safe_dslist template
+	* fixed a bug in the Datasource copy constructor
 
 2006.10.01: David Nichols
 	* corrected the atomicity of module initialization
